# pingup

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Gruntfile.js  LICENSE  README.md  SPEC.md  _config.yml  app.js  app.js.map  config.yaml  docker-compose.yml  index.es6  index.html  index.js  index.js.map  package-lock.json  package.json  params.json  pingup.esproj  pingup.njsproj  pingup.sln  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  spec-validator.yml
agent/: agent_coverage.txt  config.yaml  package.json
agent/src/: cli.ts  config.ts  index.ts
agent/tests/: config.test.ts
common/models/: monitor.js  monitor.json  owner.json  project.json
docs/: coverage.html  index.html
libs/binary-protocol/: package.json
libs/ping/: package.json
libs/scanner/: package.json
server/: config.yaml  model-config.json  package.json  server_coverage.txt
server/data/: pingup.db  pingup.db-shm  pingup.db-wal
server/src/: index.ts
server/tests/: db.test.ts
spec/: AGENT.md  CODING_STYLE.md  CONTEXT.md  DASHBOARD.md  ROADMAP.md  SERVER.md  WORKFLOW.md  ci.md  flow.md  tests.md
spec/agent/: AGENT-001-collect-cpu-metrics.md  AGENT-002-collect-ram-metrics.md  AGENT-003-collect-disk-metrics.md  AGENT-004-collect-network-metrics.md  AGENT-005-measure-latency.md  AGENT-006-send-metrics-to-server.md  (+46 more)
speckit/: README.md  implement.md  plan.md  specify.md  tasks.md
src/: PingupServer.es6  PingupServer.js  PingupServer.js.map  pingup.js
test/: pingup.test.es6  pingup.test.js  pingup.test.js.map
(+162 files in other folders)
